--- a/package.json
+++ b/package.json
@@ -18,7 +18,11 @@
     "next": "13.4.9",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-simple-maps": "^3.0.0",
     "styled-components": "^6.0.3",
     "typescript": "5.1.6"
+  },
+  "devDependencies": {
+    "@types/react-simple-maps": "^3.0.0"
   }
 }
