--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/node": "20.4.1",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
+    "@types/react-simple-maps": "^3.0.0",
     "antd": "^5.6.4",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.9",
@@ -23,6 +24,6 @@
     "typescript": "5.1.6"
   },
   "devDependencies": {
-    "@types/react-simple-maps": "^3.0.0"
+    "@svgr/webpack": "^8.0.1"
   }
 }
