--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "react-dom": "18.2.0",
     "react-redux": "^8.1.2",
     "react-simple-maps": "^3.0.0",
+    "react-tooltip": "^5.21.4",
+    "sharp": "^0.32.5",
     "styled-components": "^6.0.3",
     "typescript": "5.1.6"
   },
